--- a/views/menu.xml
+++ b/views/menu.xml
@@ -4,25 +4,34 @@
     <menuitem name ="Medical Management" id="medical_management_root_menu"/>
 
     <menuitem name ="Services" parent="medical_management_root_menu" id="medical_management_service_menu"  sequence="1"/>
-
-    <menuitem name ="Schedule Appointment" parent="medical_management_service_menu" id="medical_chedule_appointment_menu" action="medical_appointment_calendar_action" sequence="1"/>
-    <menuitem name ="Medical Appointment" parent="medical_management_service_menu" id="medical_appointment_menu" action="medical_appointment_action" sequence="2"/>
+    
+    <menuitem name ="Medical History" parent="medical_management_service_menu" id="medical_history_menu" action="medical_history_action" sequence="1"/>
+    <menuitem name ="Schedule Appointment" parent="medical_management_service_menu" id="medical_schedule_appointment_menu" action="medical_appointment_calendar_action" sequence="2"/>
+    <menuitem name ="Medical Appointment" parent="medical_management_service_menu" id="medical_appointment_menu" action="medical_appointment_action" sequence="3"/>
 
     <menuitem name ="Configuration" parent="medical_management_root_menu" id="medical_management_configuracion_menu"  sequence="2"/>
-
-    <menuitem name ="Medical Staff" parent="medical_management_configuracion_menu" id="medical_staff_menu" action="medical_staff_action" sequence="1"/>
-    <menuitem name ="Professions" parent="medical_management_configuracion_menu" id="profession_menu" action="profession_action" sequence="2"/>
-    <menuitem name ="Specializations" parent="medical_management_configuracion_menu" id="specialization_menu" action="specialization_action" sequence="3"/>
-    <menuitem name ="Types Medical Appointments" parent="medical_management_configuracion_menu" id="medical_appointment_type_menu" action="medical_appointment_type_action" sequence="4"/>
-    <menuitem name ="Nursing Services" parent="medical_management_configuracion_menu" id="medical_nursing_service_menu" action="medical_nursing_service_action" sequence="5"/>
-	<menuitem name ="Type Activities" parent="medical_management_configuracion_menu" id="medical_activity_type_menu" action="medical_activity_type_action" sequence="6"/>
-    <menuitem name ="Diagnostic Impression" parent="medical_management_configuracion_menu" id="diagnostic_impression_menu" action="medical_diagnostic_impression_action" sequence="7"/>
-    <menuitem name ="Types of Diseases" parent="medical_management_configuracion_menu" id="medical_disease_type_menu" action="medical_disease_type_action" sequence="8"/>
-	<menuitem name ="Diseases" parent="medical_management_configuracion_menu" id="disease_menu" action="medical_disease_action" sequence="9"/>
-    <menuitem name ="Types Body Systems" parent="medical_management_configuracion_menu" id="medical_body_system_type_menu" action="medical_body_system_type_action" sequence="10"/>
-    <menuitem name ="Body Parts" parent="medical_management_configuracion_menu" id="medical_body_part_menu" action="medical_body_part_action" sequence="11"/>  
+    
+    <menuitem name ="Patient" parent="medical_management_configuracion_menu" id="medical_patient_menu" action="medical_patient_action" sequence="1"/>
+    <menuitem name ="Medical Staff" parent="medical_management_configuracion_menu" id="medical_staff_menu" action="medical_staff_action" sequence="2"/>
+    
+    <menuitem name ="Services" parent="medical_management_configuracion_menu" id="medical_service_parent_menu" sequence="3"/>
+    <menuitem name ="Types Medical Appointments" parent="medical_service_parent_menu" id="medical_appointment_type_menu" action="medical_appointment_type_action" sequence="1"/>
+    <menuitem name ="Nursing Services" parent="medical_service_parent_menu" id="medical_nursing_service_menu" action="medical_nursing_service_action" sequence="2"/>
+	<menuitem name ="Type Activities" parent="medical_service_parent_menu" id="medical_activity_type_menu" action="medical_activity_type_action" sequence="3"/>
+    <menuitem name ="Diagnostic Impression" parent="medical_service_parent_menu" id="diagnostic_impression_menu" action="medical_diagnostic_impression_action" sequence="4"/>
+    
+    <menuitem name ="Diseases" parent="medical_management_configuracion_menu" id="medical_disease_parent_menu" sequence="4"/>
+    <menuitem name ="Diseases Classification" parent="medical_disease_parent_menu" id="medical_disease_classification_menu" action="medical_disease_classification_action" sequence="1"/>
+    <menuitem name ="Types of Diseases" parent="medical_disease_parent_menu" id="medical_disease_type_menu" action="medical_disease_type_action" sequence="2"/>
+	<menuitem name ="Diseases" parent="medical_disease_parent_menu" id="medical_disease_menu" action="medical_disease_action" sequence="3"/>
+    
+    <menuitem name ="Anatomy" parent="medical_management_configuracion_menu" id="medical_anatomy_menu" sequence="5"/>
+    <menuitem name ="Types Body Systems" parent="medical_anatomy_menu" id="medical_body_system_type_menu" action="medical_body_system_type_action" sequence="1"/>
+    <menuitem name ="Body Parts" parent="medical_anatomy_menu" id="medical_body_part_menu" action="medical_body_part_action" sequence="2"/>
     
     
-    
+    <menuitem name ="Others" parent="medical_management_configuracion_menu" id="medical_other_menu" sequence="6"/>
+    <menuitem name ="Professions" parent="medical_other_menu" id="profession_menu" action="profession_action" sequence="1"/>
+    <menuitem name ="Specializations" parent="medical_other_menu" id="specialization_menu" action="specialization_action" sequence="2"/>
     </data>
 </openerp>
